infrastructure/kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-prod
  namespace: default
  labels:
    app: portfolio
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
      env: prod
  template:
    metadata:
      labels:
        app: portfolio
        env: prod
    spec:
      containers:
      - name: portfolio
        image: petarpdev/devops-portfolio:prod-bd75bad4724ecb130eb11d583aa3fe398127ff2d
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
