infrastructure/kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-prod-service
  namespace: default
  labels:
    app: portfolio
    env: prod
spec:
  type: NodePort
  selector:
    app: portfolio
    env: prod
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
